# cos

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: Clangd.cmake  DevOrin.cmake  clangd.in
constants/dev-orin/: camera.json
skills/cos-build/: SKILL.md
skills/cos-build/agents/: openai.yaml
skills/deploy-jetson-orin/: SKILL.md
skills/deploy-jetson-orin/agents/: openai.yaml
src/: CMakeLists.txt
src/apriltag/: CMakeLists.txt  apriltag_detector.h  gpu_apriltag_detector_node.cc  gpu_apriltag_detector_node.h  nvidia_apriltag_detector_node.cc  nvidia_apriltag_detector_node.h  opencv_apriltag_detector_node.h
src/camera/: CMakeLists.txt  jpeg_disk_camera.cc  jpeg_disk_camera.h  nvjpeg_decode_node.cc  nvjpeg_decode_node.h  nvjpeg_fd_decode_node.cc  nvjpeg_fd_decode_node.h  nvjpeg_gpu_decode_node.cc  nvjpeg_hardware_accelerated_decode_node.cc  uvc_camera_node.cc  uvc_camera_node.h
src/control_loop/: CMakeLists.txt  context.h  control_loop.cc  control_loop.h  message.h  node.h  thread_pool.cc  thread_pool.h  timed_node.h  timer.cc  timer.h
src/examples/: CMakeLists.txt  control_loop_example.cc  mjpeg_streamer.cc  nvidia_apriltag_detect.cc
src/localization/: CMakeLists.txt  multi_tag_solver_node.cc  multi_tag_solver_node.h  position.h  solver_common.cc  solver_common.h  square_solver_node.cc  square_solver_node.h  unambiguous_solver_node.cc  unambiguous_solver_node.h
src/logging/: CMakeLists.txt  jpeg_buffer_log_node.cc  jpeg_buffer_log_node.h
src/streamer/: CMakeLists.txt  jpeg_buffer_streamer_node.cc  jpeg_buffer_streamer_node.h
src/test/: CMakeLists.txt  nvidia_apriltag_detector_node_test.cc  test_gpu_apriltag_detector.cc  test_thread_pool.cc  timestamp_test.cc
src/tools/: CMakeLists.txt  compress_jpeg.cc  jpeg_disk_replay.cc  test_gpu_apriltag_detector.cc  uvc_logger.cc  uvc_streamer.cc
src/utils/: CMakeLists.txt  camera_config.cc  camera_config.h  cuda.cc  cuda.h  cv_geometry.cc  cv_geometry.h  json.cc  json.h  solver_common.cc  solver_common.h  stop.h
